tests/fixtures/invalid/bytes_add_int.py
# Cannot add Bytes and Int
x: bytes = b"hello" + 1
